@@ -3,6 +3,7 @@ cinder (2:9.0.0~b1+dfsg1-1) experimental; urgency=medium
   * New upstream release.
   * Fixed (build-)depends for this release.
   * Refreshed patches.
+  * Fixed generation of cinder.conf namespace list.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 09 Jun 2016 09:31:38 +0200
 
